Making frontpage forward to wanted look

--- a/Front/public/locales/en/translation.json
+++ b/Front/public/locales/en/translation.json
@@ -1,3 +1,8 @@
 {
-    "Chosen days": "Chosen days"
+    "Chosen days": "Chosen days",
+    "Frontpage": "Frontpage",
+    "Calendar": "Calendar",
+    "Profile": "Profile",
+    "Cat Hotel reservation calendar":"Cat Hotel reservation calendar",
+    "Select a Date Range": "Select a Date Range"
 }
