--- a/Front/public/locales/fi/translation.json
+++ b/Front/public/locales/fi/translation.json
@@ -1,3 +1,8 @@
 {
-    "Chosen days": "Valitut päivät"
+    "Chosen days": "Valitut päivät",
+    "Frontpage": "Etusivu",
+    "Calendar": "kalenteri",
+    "Profile": "Profiili",
+    "Cat Hotel reservation calendar": "Kissahotellin varauskalenteri",
+    "Select a Date Range": "Valitse päivämäärät"
 }
