Added some responsiveness to navBar and also navigation to different pages

--- a/Front/public/locales/en/translation.json
+++ b/Front/public/locales/en/translation.json
@@ -2,7 +2,9 @@
     "Chosen days": "Chosen days",
     "Frontpage": "Frontpage",
     "Calendar": "Calendar",
+    "Cat Hotel reservation calendar": "Cat Hotel reservation calendar",
+    "Select a Date Range": "Select a Date Range",
     "Profile": "Profile",
-    "Cat Hotel reservation calendar":"Cat Hotel reservation calendar",
-    "Select a Date Range": "Select a Date Range"
+    "Reservations": "Reservations",
+    "Log out": "Log out"
 }
