Reservation page with useDates hook + backend start

--- a/Front/public/locales/en/translation.json
+++ b/Front/public/locales/en/translation.json
@@ -6,5 +6,10 @@
     "Select a Date Range": "Select a Date Range",
     "Profile": "Profile",
     "Reservations": "Reservations",
-    "Log out": "Log out"
+    "Log out": "Log out",
+    "Log in": "Log in",
+    "Email": "Email",
+    "Password": "Password",
+    "Sign in to make reservations": "Sign in to make reservations",
+    "Front page": "Front page"
 }
