--- a/Front/public/locales/fi/translation.json
+++ b/Front/public/locales/fi/translation.json
@@ -6,5 +6,10 @@
     "Select a Date Range": "Valitse päivämäärät",
     "Profile": "Profiili",
     "Reservations": "Varaukset",
-    "Log out": "Kirjaudu ulos"
+    "Log out": "Kirjaudu ulos",
+    "Log in": "Kirjaudu",
+    "Email": "Sähköposti",
+    "Password": "Salasana",
+    "Sign in to make reservations": "Kirjaudu sisään tehdäksesi varauksia",
+    "Front page": "Etusivu"
 }
